[Fix] Lists max size